2001-07-18  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.c (balance_helper): fix bug

2001-07-17  Dave Peticolas  <dave@krondo.com>

	* src/engine/Scrub.c (xaccGroupScrubCommodities): use group
	begin/commit to speed up processing

	* src/engine/Group.[ch] (xaccAccountGroupBeginEdit): make public

2001-07-18  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/payables.scm: Make creditor display
	order configurable.

	* src/guile/gnc.gwp: wrap safe_strcmp.

	* src/gnome/dialog-print-check.c: revert inadvertant change
	(sorry . . .).

2001-07-17  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-features.sgml: Matt Krai's doc patch

	* doc/sgml/C/xacc-about.sgml: Matt Krai's doc patch

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/gnome/gnc-dateedit.c: Matt Kraai's date accelerator bug fix

	* src/engine/io-gncbin-r.c: fix bug with price import (use
	posted date, not entered date).

	* src/engine/gnc-pricedb.[ch]: fix bugs with setting currency and
	commodity and with converting from legacy commodities.

	* src/engine/Transaction.c (xaccTransAppendSplit): make sure
	split's value conforms to the transaction common currency.

2001-07-12  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-register.c: same as below

	* src/scm/report/taxtxf.scm: use split amount

2001-07-13  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/payables.scm: New file - an 
	"Accounts payable by creditor" report.

	* src/scm/date-utilities.scm: Added a couple
	more datedeltas.
	
	* src/scm/Makefile.am: update for new file.

2001-07-12  Dave Peticolas  <dave@krondo.com>

	* src/register/splitreg.[hc]: same as below

	* src/SplitLedger.c: remove share balance cells, they are now
	redundant

	* accounts/*/*: currency->commodity

	* src/scm/engine-interface.scm: quantity->amount

	* src/guile/guile-util.[ch]: quantity->amount

	* src/guile/gnc.gwp: quantity->amount

	* src/SplitLedger.c: quantity->amount
